--- a/VRChat/22/1156022.html
+++ b/VRChat/22/1156022.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "+2Jyc/HtsZIyp4IWN7GuL6Z5VJn1J7rJAdhVAwLTVcw="></script>
+    "3UsB85xo1ZfcFj9FzyzXij2rYH7h1rN8ydEI/EpLbV8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRC等想定・着せ替え改変用サイバー巫女服モデル","description":"□VRChatアバター等向け改変用サイバー巫女服モデル\n14719△ポリゴン、Humanoid設定・スキニング済み。\n\n\n□内容\n・2019CyberMikohuku.unitypackage　本体\n\n・2019CyberMikohuku.fbx　本体2\n\n・texフォルダ　各種テクスチャ・マップ\n\n・readme.txt これ\n\n・0x.png　サンプル画像\n\n\n□使用方法\n\nfbxデータやunitypackageを各種ソフトにインポートして下さい。\n\nunitypackage版をインポートする際は、UnityChanToonShader2.0.5を予めプロジェクトにインポートした上で\n本アバターのunitypackageをインポートして下さい。\nDynamicBoneを使用する場合は同様に事前にインポートを行って下さい。\n\n□改変について\n\nご自由にどうぞ。基本的には、Headボーンの下に頭や髪などを設置すればそのまま使えます。\n複雑な改変を行いたい場合は各種モデリングソフトにfbxをインポートして下さい。\n\n\n\n\n□利用規約\n\n・本モデルデータの著作権は製作者ヴィジに帰属します。\n\n・改変・改造は自由に可能です。R-18/R-18Gも可。\n\n・政治的、宗教的、誹謗中傷目的での利用を禁じます。\n\n・元モデルデータ、改変データを再配布・再利用可能な状態で公開する事を禁じます。\n\n・VRCなどのプラットフォーム上にて、アバターペデスタル等の購入者以外の不特定多数が利用できる状態や、public設定でのアバターアップロードを禁じます。\n\n・本モデルの購入者は営利活動での利用が可能です。\n\n・本モデルの利用によるトラブル・損失等に製作者は一切の責任を負いません。\n\n\n□更新履歴\n\n2018/12/31　販売開始しました。\n\n\n\n\n□連絡先\n\nTwitter： @mabo_to_fu\nVRChat：AP1895\nメール： stanag2324@gmail.com","url":"https://booth.pm/ja/items/1156022","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1231"},"image":"https://booth.pximg.net/c/620x620/dd09d57d-ff0e-4d48-b34c-08c891168638/i/1156022/e4737b8d-9738-4aa4-8fc4-58aa9219010b_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="+2Jyc/HtsZIyp4IWN7GuL6Z5VJn1J7rJAdhVAwLTVcw="></script>
+    nonce="3UsB85xo1ZfcFj9FzyzXij2rYH7h1rN8ydEI/EpLbV8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -451,9 +451,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
