--- a/VRChat/15/1154915.html
+++ b/VRChat/15/1154915.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "a0VC9d4mvmv7rIjN7CfzyhPtqmAKuh08Kb7AiLE0Ig8="></script>
+    "LRgJ6UUjNZwrbqe1WBOVcGLfsJ2mMulKl6u1iuyBw3o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"『スペンサー銃』","description":"-----------------\n\n\n『かつての戦争で活躍した傑作銃といえば、このスペンサー銃がその一つです。美しい形のこのカービンライフルは、銃身を短くし、馬上でも取り扱いやすく作られています。この銃を手にすれば、どんな集団を前にしても恐れる必要がなくなり冷徹に相手を仕留めることでしょう。』\n\n\n-----------------\n\n\n\nこの度はUltraGunsAtomicのモデルをご覧いただき誠にありがとうございます。\nこちらのモデルは主にVRchat向けに制作されております。それ以外の利用については想定されておりません。\n\n\n\n-----------------\n\n\n\n『内容物』\n\n\n・fbxモデル\nスペンサー銃 3824ポリゴン(スコープを外すと2878ポリゴン)\nなお、スコープは飾りのため機能しません。\n\n・スペンサー銃unitypackage\nこちらをunityにドラッグ\u0026ドロップするだけで導入できます。\nまた、unityに導入するとフォルダ内にテクスチャ、FBX、設定済みマテリアル、設定済みプレハブ4種が入っています。\n更にカラーリングが黒、白、真鍮、金の4種を用意しています。Textureフォルダの中へカラーごとに分けているため、一部分だけ材質の変更も簡単にできます。\n\n\n\n-----------------\n\n\n\n『利用規約』\n\n\n\n【許可】\n\n・VRchat内での使用(アバターに持たせる・ワールドのオブジェクト・VRchatのゲームに組み込む等)\n\n・データ、モデルの改変(なお、改変されたモデルにも本規約は適応されます。)\n\n・動画制作(営利・非営利は問いませんが、一報頂けると嬉しいです。)\n\n・R-18、R-18Gの利用\n\n・イラストなどへの参考、トレス等への利用。\n\n・利用者自身が使用できる形で本モデルが使用されたアバターのVRchat内へのアップロード（本モデルが使用されたアバターペデスタルへのアップロードは許可します）\n\n・改変したテクスチャの配布、販売（ただし、配布する際も販売する際にも予め制作者の方へ連絡してください。加えて、本データを一切改変せずそのまま再配布する事は禁止します）\n\n\n\n-----------------\n\n\n\n【禁止】\n\n・名誉棄損、法律に反する反社会的行為、悪意を持った差別的な意図で本モデルを使用。\n\n・自作発言（本モデルを改変し利用している等の発言は問題ありません）\n\n・本モデルの無許可の再配布、販売（改変したモデル含む）\n\n・このモデルを使用した嫌がらせ行為（嫌がる相手に突きつける等）\n\n\nなお、禁止事項に違反した場合、制作者はいつでも利用を差し止めできます。\n\n\n\n-----------------\n\n\n\n【注意】\nこのモデルはVRchatでの使用を想定しています。それ以外での使用により発生した障害、事故、トラブルについては一切の責任を負えません。\nまた、このモデルに関していかなる保証も行いません。\nまた、このモデルを使用しVRchat内で発生したトラブル、障害、事故についても一切責任を負えません。\n\nこのモデルを利用した時点で以上の規約に同意することとなりますので、今一度しっかりと目をお通し下さい。\n\n\n\n-----------------\n\n\n\n本規約、本データについて分からないことや疑問、違和感や不具合などがございましたらお気軽にご連絡ください。\n\n\n\nVRchat；UGA_IYU\n\nTwitter；@uga_IYU\n\nbooth；https://ultragunsatomic.booth.pm/\n\nモデル制作者；う゛","url":"https://booth.pm/ja/items/1154915","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/2aaf8e6b-f522-4f3e-818f-90223f1e4947/i/1154915/7d3b832e-a5b3-4c89-87a3-aef356acb72a_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a0VC9d4mvmv7rIjN7CfzyhPtqmAKuh08Kb7AiLE0Ig8="></script>
+    nonce="LRgJ6UUjNZwrbqe1WBOVcGLfsJ2mMulKl6u1iuyBw3o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -436,9 +436,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
