--- a/VRChat/61/1154661.html
+++ b/VRChat/61/1154661.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "t3UT040nwAIBApTlEYSWPBCtM+czbi48597sUZ8/Pj0="></script>
+    "+tBWVqZO8cBHy9fr6Vcg7yYBO0WwW/XZXuHcs71pwlE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【UnityPackage】十字架","description":"20分くらいで作った十字架です。シャーロちゃんのマフラーの先端につけて揺らすために作りました。\nテクスチャーはスタンダードシェーダー向けに書き出したもの（3枚）と2D Viewで書き出したもの（1枚）があり、Prefabをそれぞれ作っています。\nちなみに私はUTSを使う場合は2D Viewのテクスチャーを使っています。UTSで金属の質感の設定がワカラン...\n\n【仕様】\nポリゴン 3285\nマテリアル　1\nテクスチャー　3(1)\n\n【配布形式】\nUnityPackage\n\n【利用規約】\n商用利用、改変は可能です。\n二次配布、自作発言は禁止します。\nこの商品を利用したことで発生するトラブル等に関して責任を負いません。","url":"https://booth.pm/ja/items/1154661","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/da15b300-8632-4664-a059-a7e1fbad1afa/i/1154661/c91a38ec-5f0c-4be8-8fb9-0f8e2b0d683f_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="t3UT040nwAIBApTlEYSWPBCtM+czbi48597sUZ8/Pj0="></script>
+    nonce="+tBWVqZO8cBHy9fr6Vcg7yYBO0WwW/XZXuHcs71pwlE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -522,9 +522,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
