--- a/VRChat/05/1154505.html
+++ b/VRChat/05/1154505.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "plj4rdXJcdAbLhulQXUQbymfOMHJVyFzle/ZLWweVmY="></script>
+    "0mSLJy54sHKaNnU2k0WM88dB/0rjkiwYRcIQPFBx4/o="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"3D Model Lizardia Falloch","description":"C95で頒布した3Dモデルです。\nzipファイル解凍にはパスワードが必要です。\n\n2020/11/14更新\n解凍パスワード無しのboothお支払いバージョンを頒布する事にしました。100円の方をご選択ください。\n\n----内容物----\n・Texturesフォルダ\nテクスチャが入っています。服と体はノーマルマップもあります。\n・Lizardia.fbx\nVRC用の出力したFBXファイルです。体の中身は削除してあります。\n・Lizardia.spp\nsubstancePainterの編集ファイルです。そこそこ単純です。\n・Lizardia.blend\nblender用ファイルです。体の中身を削除してありません。(パンツは履いてますし別に乳首とか描いて無いです。)\n・Lizardia_VRC.blend\nVRChat用に目を動かせるようにしたblender用ファイルです。\n要cats blenderplugin[https://catsblenderplugin.com/homepage]\n・Lizardia_VRC_Package.unitypackage\nVRChatAvatar2.0用UnityPackageです。\n\n利用規約（内は読み飛ばしてもかまいません。）\n\n〇規約範囲\n・この規約は製作者のシンダが作成した3Dモデルおよびテクスチャ、ならびに編集ファイルを使用する方に適用されます。\n・規約の範囲内でご利用ください。\n\n〇利用する場合\n・非営利、営利は問わず、利用者自身が使用する、サービス上にアップロードする、動画作成等に利用いただけます。\n（ゲームも作っていいですけど別モデルではあるものの一応ウチのゲームの主役だからな。）\n・このデータを改変して使用する事は可能ですが、改変した場合でもシンダが著作権を専有します。また、この規約も適用されます。\n・年齢制限のかかるものについては禁止しませんが、その際に起きたトラブルについては自己責任でおねがいします。\n\n〇禁止事項\n・このデータをシンダの許可が無い状態での転載、二次配布、販売を禁じます。\nただし、サービス利用のために利用者以外が利用できない形でのサービス内へのアップロードはその限りではありません。\n・作者であるシンダの名誉を著しく棄損するような行為を禁止します。\n\n〇免責事項\n・シンダはこのデータに関するどのような保証も行いません。\n・このデータの使用により発生した事故、障害について、シンダは一切の責任を負いません。\n・規約は予告なく変更される場合があります。規約が変更された場合にもこのデータの使用をもって規約に同意したこととします。\n\n\n-----要は-----\n・節度を持って利用してくださいね。怒るぞ。\n・VRMファイルのライセンスで例えるなら「明確に許可された人限定(Explictly Licensed Person)」の利用を許可する、「明確に許可された人」が「購入者」って事になります。\n\n利用規約やモデルデータの使用に関してご不明な点がございましたら\n作者のシンダ[twitter https://twitter.com/deadfactory]までお願いします。DM空いてます。\n","url":"https://booth.pm/ja/items/1154505","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/3bc2fe56-6d25-4496-bfda-38c71f74ad20/i/1154505/05e11efc-6ff7-4cf8-b70b-fbd3839129ef_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="plj4rdXJcdAbLhulQXUQbymfOMHJVyFzle/ZLWweVmY="></script>
+    nonce="0mSLJy54sHKaNnU2k0WM88dB/0rjkiwYRcIQPFBx4/o="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -473,9 +473,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
