--- a/VRChat/79/1153579.html
+++ b/VRChat/79/1153579.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ey3bWYZc+qCZwYkctuWy4RZVVUrjamvmjTQ0ozR9IdU="></script>
+    "9ltmtRk9+VXB8eI0tSKRlIojym4h9nfbpUAVqPtWaO8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AF製TacticalLight","description":"工房「The garden of Ash」様で販売している『Sports Assult Rifle \"GA-01A1\"（民間向けスポーツライフル）』向けに作成されたタクティカルライトです。\n\nSpotlight設定済みのPrefab同梱で、そのまま取り付けることができます。","url":"https://booth.pm/ja/items/1153579","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/d3d523d1-e84d-4b41-911c-4b8144839726/i/1153579/f8b196a0-ad69-440e-841e-1275e8a91652_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ey3bWYZc+qCZwYkctuWy4RZVVUrjamvmjTQ0ozR9IdU="></script>
+    nonce="9ltmtRk9+VXB8eI0tSKRlIojym4h9nfbpUAVqPtWaO8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -489,9 +489,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
